--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
 <!-- jQuery -->
 <script src="{{ site.baseurl }}/assets/js/jquery-1.11.1.min.js"></script>
-
+<!--commit-->
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
 	if( window.location.search.match( /print-pdf/gi ) ) {
